tests/typescript_library_definition_support/typescript_library_definition_support.exp
Error ----------------------------------------------------------------------------------------------------- test.js:15:7

Cannot call `greet` with `42` bound to `name` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:15:7
   15| greet(42) as string; // ERROR — number not string
             ^^ [1]

References:
   node_modules/my-lib/index.d.ts:1:37
    1| export declare function greet(name: string): string;
                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:9

Cannot call `compute` with `"x"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:21:9
   21| compute("x") as number; // ERROR — string not number
               ^^^ [1]

References:
   node_modules/my-lib-js/math.d.ts:1:36
    1| export declare function compute(x: number): number;
                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:25:1

Cannot cast `value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:25:1
   25| value as string; // ERROR — number not string (d.ts says number)
       ^^^^^

References:
   node_modules/my-lib-shadow/index.d.ts:1:29
    1| export declare const value: number;
                                   ^^^^^^ [1]
   test.js:25:10
   25| value as string; // ERROR — number not string (d.ts says number)
                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:1

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:33:1
   33| foo as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-types/types.d.ts:1:27
    1| export declare const foo: number;
                                 ^^^^^^ [1]
   test.js:33:8
   33| foo as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:37:1

Cannot cast `bar` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:37:1
   37| bar as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-typings/types.d.ts:1:27
    1| export declare const bar: number;
                                 ^^^^^^ [1]
   test.js:37:8
   37| bar as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:41:1

Cannot cast `baz` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:41:1
   41| baz as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-exports-types/types.d.ts:1:27
    1| export declare const baz: number;
                                 ^^^^^^ [1]
   test.js:41:8
   41| baz as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:45:1

Cannot cast `qux` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:45:1
   45| qux as string; // ERROR — number not string (exports types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-exports-and-types/types.d.ts:1:27
    1| export declare const qux: number;
                                 ^^^^^^ [1]
   test.js:45:8
   45| qux as string; // ERROR — number not string (exports types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:49:1

Cannot cast `val` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:49:1
   49| val as string; // ERROR — number not string (index.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-types-extensionless/index.d.ts:1:27
    1| export declare const val: number;
                                 ^^^^^^ [1]
   test.js:49:8
   49| val as string; // ERROR — number not string (index.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:53:1

Cannot cast `nested` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:53:1
   53| nested as string; // ERROR — number not string (types.d.ts says number)
       ^^^^^^

References:
   node_modules/pkg-with-nested-export-types/types.d.ts:1:30
    1| export declare const nested: number;
                                    ^^^^^^ [1]
   test.js:53:11
   53| nested as string; // ERROR — number not string (types.d.ts says number)
                 ^^^^^^ [2]



Found 9 errors
